force-app/main/default/objects/SVMXA360__CONF_HierarchyConfig__c/SVMXA360__CONF_HierarchyConfig__c.object-meta.xml
<CustomObject>
    <description>This object stores configurations for the Hierarchy component.</description>
    <label>Hierarchy Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchy Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>