force-app/main/default/objects/SVMXA360__CONF_HierarchyConfig__c/fields/SVMXA360__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used as an org wide fallback configuration, if a user’s profile is not assigned to a configuration. There will be only one default config in an org.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>